test/errors/invalid_payload_type_in_continue.ml
let () =
  match%continue k () with
  | [%effect ()] -> ()
;;
