test/errors/invalid_payload_type_in_continue.expected
File "invalid_payload_type_in_continue.ml", line 3, characters 4-16:
Error: ppx_effects: invalid node `[%effect <expr>]` used as a pattern.
       Hint: did you mean to use `[%effect? <pattern>]` instead?
